--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -6,8 +6,28 @@ on:
       - main
 
 jobs:
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install libraries 
+        run: pip install flake8
+      - name: Lint with flake8
+        run: |
+          cd function
+          flak8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flak8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics        
+  
+  
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -20,6 +40,7 @@ jobs:
           cd function
           python -m pip install --upgrade pip
           if [-f requirements.txt]; then pip install -r requirements.txt -t .;fi
+      
       - name: Create zip bundle
         run: |
           cd function
