--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Lint with flake8
         run: |
             cd function
-            flak8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-            flak8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics        
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics        
   
   
   build:
