--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install libraries 
-        run: pip install flake8
+        run: pip install -U flake8
       - name: Lint with flake8
         run: |
             cd function
