--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -53,6 +53,7 @@ jobs:
           
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: checkout code
         uses: actions/create-release@v1
